# cpp-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: IncludeMeOnce.cmake  PrepareGoogleTest.cmake  _section_compiler_flags.cmake  _section_dependencies.cmake  _section_options.cmake  _section_targets.cmake  _section_testing.cmake
include/yours/: yours.hpp
src/: impl.cpp  main.cpp
test/: impl_test.cpp
